ADDED:Used UX design to set the button style

--- a/css/EmployeePayrollApp.css
+++ b/css/EmployeePayrollApp.css
@@ -206,6 +206,77 @@ select {
       align-items: flex-start;
     }
   }
+/* UC7 */
+@media only screen and (max-width: 960px) {
+    .row-content {
+        display: block;
+        flex-direction: row;
+        margin-bottom: 10px;
+        align-items: center;
+        border: 0px solid green;
+    }
+    .profile 
+    {
+    width: 30px;
+    border-radius: 50%;
+    margin-left: 12px;
+    }
+    .cancelButton {
+      margin-left: 100px;
+    }
+    .form {
+      width: 100%;
+      padding: 44px 20px;
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .row-content {
+        display: block;
+        flex-direction: row;
+        margin-bottom: 10px;
+        align-items: center;
+        border: 0px solid green;
+    }
+    .form {
+      margin-top: 10px;
+      width: 100%;
+    }
+    .row {
+      flex-direction: column;
+    }
+    .uploadButton {
+      justify-content: flex-start;
+    }
+    .profile 
+    {
+    width: 30px;
+    border-radius: 50%;
+    margin-left: 12px;
+    }
+    .profile-radio-button {
+      flex-flow: wrap;
+    }
+    .submit-reset {
+      width: 100%;
+      display: inline-block;
+      flex-grow: 1;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+    .submitButton {
+      margin: 0;
+    }
+    .buttonParent {
+      flex-direction: column-reverse;
+      align-items: flex-start;
+    }
+    .cancelButton {
+        margin-left: 100px;
+      }
+  }
+
 
 
 
