--- a/css/NewEmployeePayroll.css
+++ b/css/NewEmployeePayroll.css
@@ -3,11 +3,6 @@ html body
     margin: 0;
     height: 100%;
 }
-.header 
-{
-    padding: 15px 0;
-    background-color: #ffffff;
-}
 .header-content
 {
     display: flex;
@@ -16,17 +11,25 @@ html body
     align-items: center;
     border: 0px solid green;   
 }
+.header 
+{
+    padding: 15px 0;
+    justify-content: flex-start !important;
+    background-color: #ffffff;
+}
 .logo-content 
 {
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 0px solid green;
-    width: 80%;
+    /* width: 80%; */
+    /* margin: auto; */
+    padding: 10px;
 }
 .logo-content-img { border: solid 0px #42515f;}
 
-.emp-text 
+.emp-detail-text
 {
     font: normal normal bold 20px/25px Montserrat;
     font-family: "Montserrat", sans-serif;
@@ -38,18 +41,18 @@ html body
 
 * { box-sizing: border-box; }
 /* UC2 */
-.add-button {
-    font: normal normal normal 22px/29px Roboto;
-    letter-spacing: 0px;
+.add-button{
+    font-size: 21px;
+    font-family: Roboto;
     color: #ffffff;
-    opacity: 1;
-    background: #82a70c 0% 0% no-repeat padding-box;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 18px;
-    outline: none;
+    font-weight: 400;
+    min-width: 145px;
+    padding: 9px 9px;
     cursor: pointer;
-    text-decoration: none; 
+    background: #82a70c 0% 0% no-repeat padding-box;
+    border: 2px solid #969696;
+    border-radius: 9px;
+    text-decoration: none;
 }
 
 .main-content {
@@ -60,6 +63,7 @@ html body
     padding: 30px 0 10px;
     box-sizing: border-box;
 }
+
 
 .header-content {
     display: flex;
@@ -87,3 +91,82 @@ html body
     text-align: center;
     display: inline-block;
 } 
+.table-main{
+    width: 80%;
+    margin:0 auto;
+    overflow: auto;
+}
+.table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 15px;
+    min-width: 800px;
+}
+
+td, th {
+    text-align: left;
+    padding: 5px 8px;
+}
+
+th {
+    background: #42515f 0% 0% no-repeat padding-box;
+    border-radius: 3px 3px 0px 0px;
+    text-align: left;
+    font: normal normal medium 18px/24px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    text-transform: uppercase;
+    opacity: 1;
+    border: 0px solid #dddddd;
+}
+
+tr:not(:first-child)
+{
+    background: #ffffff 0% 0% no-repeat padding-box;
+    border: 1px solid #e3e3e3;
+    border-radius: 3px;
+}
+
+td
+{
+    font: normal normal normal 14px/21px Roboto;
+    letter-spacing: 0px;
+    color: #3d3d3d;
+    opacity: 1;
+}
+td:first-child
+{
+    display: flex;
+    align-items: center;
+}
+td img:first-child 
+{
+margin-right: 10px;
+}
+td img 
+{
+    cursor: pointer;
+}
+.dept-label
+{
+    background-color:#e9fea5;
+    border-radius: 40%;
+    width: fit-content;
+    padding: 1px 7px;
+    text-align: center;
+    font-size: 14px;
+    display: inline-block;
+    font-weight: 300;
+    margin-bottom: 8px;
+}
+.text-name
+{
+display: flex;
+flex-direction: column;
+font: normal normal bold 20px/25px Montserrat;
+font-family: "Montserrat", sans-serif;
+    letter-spacing: 0px;
+    color: #82a70c;
+    text-transform: capitalize;
+}
+
